# voxel

./: Cargo.toml  README.md
src/: main.rs  mesh.rs  util.rs  world.rs
src/mesh/: chunk.rs  event.rs  face.rs  generation.rs  quad.rs  side.rs  voxel.rs
src/mesh/event/: chunk_load_event.rs  chunk_unload_event.rs
src/util/: color.rs  position.rs  visibility.rs
src/world/: despawn.rs  render_distance.rs
