[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12" } #Remove on release
bevy_flycam = "*"
noise = "0.8"
rayon = "1.8.0"
futures-lite = "2.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2